# wandern-eric

./: .gitignore  CLAUDE.md  README.md  package-lock.json
.claude/commands/: prototype.md  spec.md
.github/workflows/: deploy.yml
cheer-function/: README.md  main.py  requirements.txt
python-backend/: .env-example  .gitignore  google_health_api_migration.ipynb  main.py  pyproject.toml
specs/: 0001-google-health-migration.md  0002-activities-module.md  0003-week-over-week-chart.md  0004-custom-heatmap-monday-start.md  0005-dashboard-layout-regroup.md  0006-cheer-button.md  README.md  TEMPLATE.md
wandern-eric/: README.md  index.html  package-lock.json  package.json  vite.config.js
wandern-eric/public/: CNAME
wandern-eric/src/: App.jsx  index.css
wandern-eric/src/components/: Activities.jsx  Aggregations.jsx  Changelog.jsx  Cheer.jsx  Datenschutz.jsx  Heatmap.jsx  Impressum.jsx  ProjectionAlert.jsx  StepHeatmap.jsx  StepStats.jsx  StepsTrend.jsx  WeekComparison.jsx
wandern-eric/src/data/: data.json
wandern-eric/src/lib/: cheerApi.js  config.js  week.js
