[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["codineric <risheric@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"
pandas = "^2.3.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
